--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,14 +3,15 @@
 <head>
 	<title> UEFA Champions League </title>
 </head>
-	<div style="padding:30px; width:96.9%; background:#190F76; color:white; font-size:400%; position:absolute ; top:0px ; left:0px">
+	<div style="padding:30px; width:96.9%; color:white; font-size:400%; position:absolute ; top:0px ; left:0px">
 	<center>UEFA Champions League</center>
 	</div>
-	<div style="padding:30px; width:96.9%; background:#190F76; color:white; font-size:150%; position:absolute ; top:120px ; left:0px">
-	<center>En esta pagina encontraras toda la informacion acerca de los octavos de final de la UEFA Champions League.</center>
+	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:120px ; left:0px">
+	<center>En esta pagina encontraras informacion acerca de los octavos de final de la UEFA Champions League.</center>
 	</div>
 	</body>
 		<img src ="https://as.com/futbol/imagenes/2020/08/12/champions/1597243334_281965_1597243466_noticia_normal.jpg">
 	</body>
+	<a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partido"><input type="button" value="Partidos."></a>
 	<script src="index.js"></script>
 </html>
