--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,15 +3,28 @@
 <head>
 	<title> UEFA Champions League </title>
 </head>
-	<div style="padding:30px; width:96.9%; color:white; font-size:400%; position:absolute ; top:0px ; left:0px">
-	<center>UEFA Champions League</center>
+	<div style="padding:30px; width:96.9%; color:white; font-size:400%; position:absolute ; top:300px ; left:0px">
+	    <center>UEFA Champions League</center>
 	</div>
-	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:120px ; left:0px">
-	<center>En esta pagina encontraras informacion acerca de los octavos de final de la UEFA Champions League.</center>
+	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:400px ; left:0px">
+	    <center>En esta página encontraras información acerca de los octavos de final de la UEFA Champions League.</center>
+	</div>
+		<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:500px ; left:0px">
+	    <center>Podras ver la información en alguna de las siguientes paginas, dando clip en alguno de los siguientes botones.</center>
+	</div>
+	   	<div style="padding:30px; width:85%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
+	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/about"><input type="button" value="About."></a></center>
+	</div>
+	</div>
+	    <div style="padding:30px; width:100%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
+	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/UEFA-CHAMPIONS-LEAGUE.png"><input type="button" value="Imagen."></a></center>
+	</div>
+	</div>
+	    <div style="padding:30px; width:115%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
+	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partidos"><input type="button" value="Partidos."></a></center>
 	</div>
 	</body>
-		<img src ="https://as.com/futbol/imagenes/2020/08/12/champions/1597243334_281965_1597243466_noticia_normal.jpg">
+		<img src ="https://as.com/futbol/imagenes/2020/08/12/champions/1597243334_281965_1597243466_noticia_normal.jpg" height="100%" width="100%" />
 	</body>
-	<a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partido"><input type="button" value="Partidos."></a>
 	<script src="index.js"></script>
 </html>
