--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -9,17 +9,15 @@
 	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:400px ; left:0px">
 	    <center>En esta página encontraras información acerca de los octavos de final de la UEFA Champions League.</center>
 	</div>
+	<div>
 		<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:500px ; left:0px">
 	    <center>Podras ver la información en alguna de las siguientes paginas, dando clip en alguno de los siguientes botones.</center>
 	</div>
+	<div>
 	   	<div style="padding:30px; width:85%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
 	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/about"><input type="button" value="About."></a></center>
-	</div>
-	</div>
 	    <div style="padding:30px; width:100%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
 	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/UEFA-CHAMPIONS-LEAGUE.png"><input type="button" value="Imagen."></a></center>
-	</div>
-	</div>
 	    <div style="padding:30px; width:115%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
 	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partidos"><input type="button" value="Partidos."></a></center>
 	</div>
