--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,17 +10,20 @@
 	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:400px ; left:0px">
 	    <center>En esta página encontraras información acerca de los octavos de final de la UEFA Champions League.</center>
 	</div>
-	<div>
 		<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:500px ; left:0px">
-	    <center>Podras ver la información en alguna de las siguientes paginas, dando clip en alguno de los siguientes botones.</center>
-	</div>
-	<div>
-	   	<div style="padding:30px; width:85%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
-	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/about"><input type="button" value="About."></a></center>
-	    <div style="padding:30px; width:100%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
-	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/UEFA-CHAMPIONS-LEAGUE.png"><input type="button" value="Imagen."></a></center>
-	    <div style="padding:30px; width:115%; color:white; font-size:150%; position:absolute ; top:550px ; left:0px">
-	    <center><a href="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partidos"><input type="button" value="Partidos."></a></center>
+	    <center>Podras ver la información en alguna de las siguientes páginas, abriendo alguno de los siguientes enlaces.</center>
+	    
+	<center>
+	<form action="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/about">
+        <input type="submit" value="About" />
+    </form>
+    <form action="https://uefachampionsleague-arep-rcsr.herokuapp.com/UEFA-CHAMPIONS-LEAGUE.png">
+        <input type="submit" value="imagen" />
+    </form>
+	<form action="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/partidos">
+        <input type="submit" value="Partidos" />
+    </form>
+    </center>
 	</div>
 	</body>
 		<img src ="https://as.com/futbol/imagenes/2020/08/12/champions/1597243334_281965_1597243466_noticia_normal.jpg" height="100%" width="100%" />
