--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,17 +1,16 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title> UEFA Champions League </title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 	<div style="padding:30px; width:96.9%; color:white; font-size:400%; position:absolute ; top:300px ; left:0px">
 	    <center>UEFA Champions League</center>
 	</div>
 	<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:400px ; left:0px">
-	    <center>En esta p·gina encontraras informaciÛn acerca de los octavos de final de la UEFA Champions League.</center>
+	    <center>En esta p√°gina encontraras informaci√≥n acerca de los octavos de final de la UEFA Champions League.</center>
 	</div>
 		<div style="padding:30px; width:96.9%; color:white; font-size:150%; position:absolute ; top:500px ; left:0px">
-	    <center>Podras ver la informaciÛn en alguna de las siguientes p·ginas, abriendo alguno de los siguientes enlaces.</center>
+	    <center>Podras ver la informaci√≥n en alguna de las siguientes paginas, abriendo alguno de los siguientes enlaces.</center>
 	    
 	<center>
 	<form action="https://uefachampionsleague-arep-rcsr.herokuapp.com/Apps/about">
